--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -23,3 +23,7 @@ sphinx:
 python:
   install:
     - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - dev
