--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
     "pytest",  # for testing
     "pytest-cov",  # for test coverage
     "sphinx",  # for generating html docs
+    "sphinx-autoapi",  # for generating api docs
     "furo",  # for sphinx theme
     "myst-nb",  # for jupyter notebooks in sphinx
 ]
