--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
     "pre-commit",  # for pre-commit hooks
     "pytest",  # for testing
     "pytest-cov",  # for test coverage
+    "pre-commit",  # for pre-commit hooks
 ]
 docs = [
     "sphinx",  # for generating html docs
