--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,12 +3,12 @@ repos:
     rev: 23.11.0
     hooks:
       - id: black
-        files: .
+        files: src
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: 'v0.1.6'
     hooks:
       - id: ruff
-        files: .
+        files: src
   - repo: 'https://github.com/pre-commit/mirrors-mypy'
     rev: v1.7.1
     hooks:
@@ -19,4 +19,4 @@ repos:
     rev: 0.6.0
     hooks:
       - id: nbstripout
-        files: .
+        files: src, docs
