--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "Playground for exploring battery state estimation methods."
 readme = "README.md"
 dependencies = [
-    "pybamm[jax]",  # for battery models
+    "pybamm",  # for battery models
     "jupyter",  # for notebooks
     "plotly",  # for plotting
     "matplotlib",  # for plotting
