--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,8 +14,10 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  jobs:
+    post_install:
+      - pip install "pybamm[jax]"
 
-# Declare the Python requirements required to build documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
