--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,9 +14,6 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-  jobs:
-    post_install:
-      - pip install "pybamm[jax]"
 
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
@@ -24,4 +21,5 @@ python:
     - method: pip
       path: .
       extra_requirements:
+        - jax
         - docs
