--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,10 @@ docs = [
     "furo",  # for sphinx theme
     "myst-nb",  # for jupyter notebooks in sphinx
 ]
+jax = [
+    "jax>=0.4,<=0.5",
+    "jaxlib>=0.4,<=0.5",
+]
 
 [project.urls]
 Homepage = "https://github.com/ahemmatifar/sox"
