--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,12 +14,14 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  jobs:
+    post_install:
+      - pybamm_install_jax
 
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+      # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
     - method: pip
       path: .
       extra_requirements:
-        - jax
         - docs
