--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,7 +16,7 @@ build:
     python: "3.12"
   jobs:
     post_install:
-      - pybamm_install_jax
+      - python -m pip install jax>=0.4 jaxlib>=0.4
 
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
