direct jax/jaxlib install

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,7 +16,8 @@ build:
     python: "3.12"
   jobs:
     post_install:
-      - python -m pip install jax>=0.4 jaxlib>=0.4
+      - python -m pip install "jax>=0.4,<=0.5"
+      - python -m pip install "jaxlib>=0.4,<=0.5"
 
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
