--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,11 +13,11 @@ sphinx:
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"
+    python: "3.11"
   jobs:
     post_install:
-      - python -m pip install "jax>=0.4,<=0.5"
-      - python -m pip install "jaxlib>=0.4,<=0.5"
+      - python -m pip install --upgrade --no-cache-dir "jax>=0.4,<=0.5"
+      - python -m pip install --upgrade --no-cache-dir "jaxlib>=0.4,<=0.5"
 
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
